v0.1.0/_sources/api/tg/methods/send_invoice.rst.txt
.. _banana-api-tg-methods-send_invoice:

send_invoice
============

.. cpp:namespace:: banana::api
.. cpp:function:: template <class Connector> \
                  api_result<message_t, Connector&&> send_invoice(Connector&& connector, send_invoice_args_t args)

.. cpp:function:: template <class Connector> \
                  api_result<message_t, Connector&&> call(Connector&& connector, send_invoice_args_t args)

   ``connector`` is any object satisfying :ref:`connector concept <banana-api-banana-connectors>`.

   Use this method to send invoices. On success, the sent Message is returned.

.. cpp:struct:: send_invoice_args_t

   Arguments that should be passed to :cpp:func:`send_invoice`.


   .. cpp:member:: integer_t chat_id

   Unique identifier for the target private chat

   .. cpp:member:: string_t title

   Product name, 1-32 characters

   .. cpp:member:: string_t description

   Product description, 1-255 characters

   .. cpp:member:: string_t payload

   Bot-defined invoice payload, 1-128 bytes. This will not be displayed to the user, use for your internal processes.

   .. cpp:member:: string_t provider_token

   Payments provider token, obtained via Botfather

   .. cpp:member:: string_t start_parameter

   Unique deep-linking parameter that can be used to generate this invoice when used as a start parameter

   .. cpp:member:: string_t currency

   Three-letter ISO 4217 currency code, see more on currencies

   .. cpp:member:: array_t<labeled_price_t> prices

   Price breakdown, a JSON-serialized list of components (e.g. product price, tax, discount, delivery cost, delivery tax, bonus, etc.)

   .. cpp:member:: optional_t<string_t> provider_data

   A JSON-serialized data about the invoice, which will be shared with the payment provider. A detailed description of required fields should be provided by the payment provider.

   .. cpp:member:: optional_t<string_t> photo_url

   URL of the product photo for the invoice. Can be a photo of the goods or a marketing image for a service. People like it better when they see what they are paying for.

   .. cpp:member:: optional_t<integer_t> photo_size

   Photo size

   .. cpp:member:: optional_t<integer_t> photo_width

   Photo width

   .. cpp:member:: optional_t<integer_t> photo_height

   Photo height

   .. cpp:member:: optional_t<boolean_t> need_name

   Pass True, if you require the user's full name to complete the order

   .. cpp:member:: optional_t<boolean_t> need_phone_number

   Pass True, if you require the user's phone number to complete the order

   .. cpp:member:: optional_t<boolean_t> need_email

   Pass True, if you require the user's email address to complete the order

   .. cpp:member:: optional_t<boolean_t> need_shipping_address

   Pass True, if you require the user's shipping address to complete the order

   .. cpp:member:: optional_t<boolean_t> send_phone_number_to_provider

   Pass True, if user's phone number should be sent to provider

   .. cpp:member:: optional_t<boolean_t> send_email_to_provider

   Pass True, if user's email address should be sent to provider

   .. cpp:member:: optional_t<boolean_t> is_flexible

   Pass True, if the final price depends on the shipping method

   .. cpp:member:: optional_t<boolean_t> disable_notification

   Sends the message silently. Users will receive a notification with no sound.

   .. cpp:member:: optional_t<integer_t> reply_to_message_id

   If the message is a reply, ID of the original message

   .. cpp:member:: optional_t<boolean_t> allow_sending_without_reply

   Pass True, if the message should be sent even if the specified replied-to message is not found

   .. cpp:member:: optional_t<inline_keyboard_markup_t> reply_markup

   A JSON-serialized object for an inline keyboard. If empty, one 'Pay total price' button will be shown. If not empty, the first button must be a Pay button.
